# classyfire

./: .env.example  .gitignore  Cargo.toml  README.md  dead_proxies.json  mypy.ini  output.json  setup.py
.github/workflows/: ci.yml  mypy.yml  python.yml  refresh-progress-report.yml
classyfire/: classification.py  classyfire.py  cli.py  exceptions.py
classyfire/utils/: __init__.py  convert_smiles_to_inchikey.py  validate_smiles.py
docs/: streaming-redesign.md
migrations/00000000000000_initial/: down.sql  up.sql
migrations/00000000000001_error_state/: down.sql  up.sql
src/: api.rs  compression.rs  config.rs  daemon.rs  db.rs  export.rs  importer.rs  lib.rs  main.rs  models.rs  progress.rs  schema.rs  streaming.rs  test_support.rs  types.rs  ui.rs  zenodo.rs
tests/: __init__.py  test_classyfire.py  test_cli.py  test_version.py
