[package]
name = "classyfire-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
ctrlc = "3.4"
diesel = { version = "2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.15"

[lints.clippy]
dbg_macro = "warn"
field_reassign_with_default = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
new_without_default = "warn"
redundant_clone = "warn"
todo = "warn"
too_many_arguments = "warn"
uninlined_format_args = "warn"
