[package]
name = "classyfire-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
ctrlc = "3.4"
dotenvy = "0.15"
memmap2 = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.44", features = ["rt-multi-thread"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
zenodo-rs = "0.1.1"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "debuginfo"

[lints.clippy]
dbg_macro = "warn"
field_reassign_with_default = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
new_without_default = "warn"
redundant_clone = "warn"
todo = "warn"
too_many_arguments = "warn"
uninlined_format_args = "warn"
